# AI_docs/API_Spec.yaml
@@ -203,6 +203,10 @@ components:
           minimum: 0.0
           title: Relevance Score
           type: number
+        synthetic:
+          default: false
+          title: Synthetic
+          type: boolean
       required:
       - chunk_id
       - text
